tests/transpiler/x/zig/two-sum.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/two-sum.zig:17:33: error: array literal requires address-of operator (&) to coerce to slice type '[]i64'
    const result = twoSum([_]i64{2, 7, 11, 15}, 9);
                          ~~~~~~^~~~~~~~~~~~~~
referenced by:
    callMain [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:637:20
    posixCallMainAndExit: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
